# cogstate-ir

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CURRENT_OBSERVATIONS.md  Cargo.toml  DATASET_CREATION_GUIDE.md  DATASET_REPORT.md  LICENSE-APACHE  PLAN.md  README.md  TRAINING_RESULTS.md  new_examples
.opencode/agents/: dataset_coverage_reviewer.md  dataset_reviewer.md  rust-reviewer.md  sampler.md  update_readme.md
data/example_01/: input.yaml  output.yaml
data/example_02/: input.yaml  output.yaml
data/example_03/: input.yaml  output.yaml
data/example_04/: input.yaml  output.yaml
data/example_05/: input.yaml  output.yaml
data/example_06/: input.yaml  output.yaml
data/example_07/: input.yaml  output.yaml
data/example_08/: input.yaml  output.yaml
data/example_09/: input.yaml  output.yaml
data/example_10/: input.yaml  output.yaml
data/example_100/: input.yaml  output.yaml
data/example_101/: input.yaml  output.yaml
data/example_102/: input.yaml  output.yaml
data/example_103/: input.yaml  output.yaml
data/example_104/: input.yaml  output.yaml
data/example_105/: input.yaml  output.yaml
data/example_106/: input.yaml  output.yaml
data/example_107/: input.yaml  output.yaml
data/example_108/: input.yaml  output.yaml
data/example_109/: input.yaml  output.yaml
data/example_11/: input.yaml  output.yaml
data/example_110/: input.yaml  output.yaml
data/example_111/: input.yaml  output.yaml
data/example_112/: input.yaml  output.yaml
data/example_113/: input.yaml  output.yaml
data/example_114/: input.yaml  output.yaml
data/example_115/: input.yaml  output.yaml
data/example_116/: input.yaml  output.yaml
data/example_117/: input.yaml
data/example_118/: input.yaml
data/example_119/: input.yaml
data/example_12/: input.yaml  output.yaml
data/example_120/: input.yaml
data/example_121/: input.yaml
data/example_122/: input.yaml  output.yaml
data/example_123/: input.yaml  output.yaml
data/example_124/: input.yaml  output.yaml
data/example_125/: input.yaml  output.yaml
data/example_126/: input.yaml  output.yaml
data/example_127/: input.yaml  output.yaml
data/example_128/: input.yaml  output.yaml
data/example_129/: input.yaml  output.yaml
data/example_13/: input.yaml  output.yaml
src/: chat.rs  dataset.rs  engine.rs  infer.rs  main.rs  model.rs  predict.rs  progress_handler.rs  renderer.rs  spec.rs  tokenizer.rs  train.rs  util.rs
(+586 files in other folders)
