[package]
name = "cogstate-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
candle-core = { version = "0.11", features = ["accelerate", "metal"] }
candle-nn = { version = "0.11", features = ["accelerate", "metal"] }
candle-transformers = { version = "0.11", features = ["accelerate", "metal"] }
hf-hub = { version = "1.0.0-rc.1", features = ["blocking"] }
tokenizers = "0.21"
indicatif = "0.18"
colored = "2"
rand = "0.9"
ureq = { version = "2", features = ["json"] }

[patch.crates-io]
candle-transformers = { path = "lib/candle-transformers" }
